--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fintory/flow-coverage-report",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "Generate an HTML report of the flow coverage data",
   "main": "dist/lib/index.js",
   "bin": {
@@ -22,7 +22,7 @@
     "jest:integrations": "jest __tests__/integrations -i",
     "jest": "npm run jest:unit && npm run jest:integrations",
     "lint": "xo --reporter=compact",
-    "prepublish": "npm run build",
+    "prepare": "npm run build",
     "test": "cross-env NODE_ENV=test npm run build && npm run lint && npm run flow-check && npm run jest && npm run flow-coverage"
   },
   "keywords": [
